// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Secondary Menu Mobile should render the snapshot when dropdown is expanded 1`] = `
<DocumentFragment>
  <nav
    aria-label="Secondary Navigation"
    class="css-1e8qhdd"
    data-testid="menu-container"
    role="navigation"
  >
    <ul
      role="list"
    >
      <div
        class="css-d53q5n"
      >
        <p
          class="css-kkkz9d"
        >
          See all 
        </p>
        <li
          class="nk-menu-item css-zbkqx2"
        >
          <button
            aria-expanded="true"
            aria-label="Collapse Secondary Menu"
            class="css-1mlhsuo"
            data-testid="menu-sub-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="css-1tvoidw-EmotionIconBase ex0cdmw0"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
              />
            </svg>
          </button>
          <ul
            class="css-260c02"
          />
        </li>
      </div>
      <div
        class="css-kf0duk"
      >
        <div
          class="css-74ql93"
        >
          <li
            class="nk-menu-item css-zbkqx2"
          >
            <a
              class="css-1uamgz7"
              data-testid="buttonLink"
              href="/home"
              id="vertical-home"
            >
              <span
                class="css-1tx73yr"
              >
                Home
              </span>
            </a>
          </li>
          <li
            class="nk-menu-item css-zbkqx2"
          >
            <a
              class="css-y3t8pq"
              data-testid="buttonLink"
              href="/news"
              id="vertical-news"
            >
              <span
                class="css-1tx73yr"
              >
                News
              </span>
            </a>
          </li>
          <li
            class="nk-menu-item css-zbkqx2"
          >
            <a
              class="css-y3t8pq"
              data-testid="buttonLink"
              href="/comment"
              id="vertical-comment"
            >
              <span
                class="css-1tx73yr"
              >
                Comment
              </span>
            </a>
          </li>
          <li
            class="nk-menu-item css-zbkqx2"
          >
            <a
              class="css-y3t8pq"
              data-testid="buttonLink"
              href="/life-and-style"
              id="vertical-life-and-style"
            >
              <span
                class="css-1tx73yr"
              >
                Life & Style
              </span>
            </a>
          </li>
          <li
            class="nk-menu-item css-zbkqx2"
          >
            <a
              class="css-y3t8pq"
              data-testid="buttonLink"
              href="/arts-and-books"
              id="vertical-arts-and-books"
            >
              <span
                class="css-1tx73yr"
              >
                Arts & Books
              </span>
            </a>
          </li>
          <li
            class="nk-menu-item css-zbkqx2"
          >
            <a
              class="css-y3t8pq"
              data-testid="buttonLink"
              href="/sport"
              id="vertical-sport"
            >
              <span
                class="css-1tx73yr"
              >
                Sport
              </span>
            </a>
          </li>
          <li
            class="nk-menu-item css-zbkqx2"
          >
            <a
              class="css-y3t8pq"
              data-testid="buttonLink"
              href="/business-and-money"
              id="vertical-business-and-money"
            >
              <span
                class="css-1tx73yr"
              >
                Business & Money
              </span>
            </a>
          </li>
          <li
            class="nk-menu-item css-zbkqx2"
          >
            <a
              class="css-y3t8pq"
              data-testid="buttonLink"
              href="/puzzles"
              id="vertical-puzzles"
            >
              <span
                class="css-1tx73yr"
              >
                Puzzles
              </span>
            </a>
          </li>
          <li
            class="nk-menu-item css-zbkqx2"
          >
            <a
              class="css-y3t8pq"
              data-testid="buttonLink"
              href="/magazines"
              id="vertical-magazines"
            >
              <span
                class="css-1tx73yr"
              >
                Magazines
              </span>
            </a>
          </li>
        </div>
      </div>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Secondary Menu Mobile should render the snapshot when dropdown is not expanded 1`] = `
<DocumentFragment>
  <nav
    aria-label="Secondary Navigation"
    class="css-1e8qhdd"
    data-testid="menu-container"
    role="navigation"
  >
    <ul
      role="list"
    >
      <div
        class="css-d53q5n"
      >
        <p
          class="css-kkkz9d"
        >
          See all 
        </p>
        <li
          class="nk-menu-item css-zbkqx2"
        >
          <button
            aria-expanded="false"
            aria-label="Expand Secondary Menu"
            class="css-1mlhsuo"
            data-testid="menu-sub-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="css-1tvoidw-EmotionIconBase ex0cdmw0"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </button>
          <ul
            class="css-1mm64yz"
          />
        </li>
      </div>
    </ul>
  </nav>
</DocumentFragment>
`;
